# 8Queens

./: .gitignore  Main.hs  README.md  cabal.config  cabal.project.freeze  queens.glade  queens8.cabal  queens8.hs  stack.yaml
lib/: FndQueens.hs
