cabal-version:       2.4

name:                queens8

version:             1.0

license:             GPL-2.0-only

author:              polina

category:            Graphics

data-files:          *.glade



executable queens8
  main-is:         Main.hs

  hs-source-dirs:  . 
                ,  lib


  build-depends: base >=4.12
               , haskell-gi-base
               , gi-gtk
               , gi-gtk-hs
               , text
               , random
               , mtl
               , containers
               , directory
               , filepath ==1.4.2.1
               , paths >=0.2
               , stm
               , Cabal

  
  other-modules: FndQueens


  ghc-options: "-O2" 
               "-threaded"
               "-with-rtsopts=-N6"
               

  default-language:    Haskell2010




